sample file edited

--- a/sample.html
+++ b/sample.html
@@ -11,9 +11,9 @@
   <header>
     <ul>
       <li class="left"><a href="#">Achieve</a></li>
-      <li class="left"><a href="#"></a></li>
-      <li class="right"><a href="#"></a></li>
-      <li class="right"><a href="#"></a></li>
+      <li class="left"><a href="#">Contact Us</a></li>
+      <li class="right"><a href="#">Sign up</a></li>
+      <li class="right"><a href="#">Login</a></li>
     </ul>
   </header>
   <section class="main-header">
@@ -22,12 +22,12 @@
   <section class="about">
     <h1>About Achieve</h1>
     <p>
-      <br>
-      
+      Achieve is a teaching material page created for students.<br>
+      By completing the Achieve, you will be able to pass the assignment
     </p>
     <p>
-      <br>
-      
+      In short, Acheive is a mockup of the top page of a task management application.<br>
+      This page explains the function of the application that allows team members to know what task they are currently doing.
     </p>
   </section>
   <section class="function">
@@ -35,25 +35,26 @@
     <div class="function-images">
       <div class="function-image">
         <img src="images/key.png">
-        <p></p>
+        <p>Login function</p>
       </div>
       <div class="function-image">
         <img src="images/mails.png">
-        <p></p>
+        <p>Email sending function</p>
       </div>
       <div class="function-image">
         <img src="images/girls.png">
-        <p></p>
+        <p>Friends connection function</p>
       </div>
       <div class="function-image">
         <img src="images/comment.png">
-        <p></p>
+        <p>Comment posting function</p>
       </div>
     </div>
   </section>
   <footer>
-    <p></p>
+    <p>Operating company DIVE INTO CODE Co., Ltd.</p>
     <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
   </footer>
 </body>
 </html>
+
