header style implemented

--- a/sample.html
+++ b/sample.html
@@ -11,13 +11,13 @@
   <header>
     <ul>
       <li class="left"><a href="#">Achieve</a></li>
-      <li class="left"><a href="#">Contact Us</a></li>
+      <li class="left"><a href="#">Inquiry</a></li>
       <li class="right"><a href="#">Sign up</a></li>
       <li class="right"><a href="#">Login</a></li>
     </ul>
   </header>
   <section class="main-header">
-    <img src="images/achieve.png">
+    <p><img src="images/achieve.png"></p>
   </section>
   <section class="about">
     <h1>About Achieve</h1>
