footer desing added

--- a/sample.html
+++ b/sample.html
@@ -52,8 +52,10 @@
     </div>
   </section>
   <footer>
-    <p>Operating company DIVE INTO CODE Co., Ltd.</p>
+    <div>
+      <p>Operating company DIVE INTO CODE Co., Ltd.</p>
     <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
+    </div>
   </footer>
 </body>
 </html>
